--- a/src/index.css
+++ b/src/index.css
@@ -764,6 +764,24 @@ li {
   overflow: auto;
 }
 
+@media screen and (max-width: 700px) {
+  .resume-container {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .resume-page {
+    margin-top: -1rem;
+    padding: 0 5% 0 45%;
+  }
+
+  .resume-container {
+    width: 90%;
+    height: 83%;
+  }
+}
+
 /*   ----- Projects  -----  */
 .projects-page {
   display: flex;
