--- a/src/index.css
+++ b/src/index.css
@@ -218,6 +218,11 @@ a {
   color: var(--fontColorSecondary);
 }
 
+.social-links > button {
+  transform: var(--transition);
+  color: var(--fontColorSecondary);
+}
+
 .github-logo {
   font-size: 2.3rem;
   cursor: pointer;
@@ -248,6 +253,86 @@ a {
   }
 }
 
+/*   ----- Modal  -----  */
+.modal-open-btn {
+  border: none;
+  background: inherit;
+}
+
+.twitter-logo {
+  cursor: pointer;
+}
+
+.social-links > button:hover {
+  color: inherit;
+  transform: scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 11;
+  border-radius: 10px;
+  /* background-color: #f80000; */
+  overflow: hidden;
+  width: 345px;
+  height: 460px;
+  text-align: center;
+}
+
+.modal > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  margin: auto;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: var(--backgroundColor);
+  cursor: pointer;
+}
+
+.close-x {
+  font-size: 5rem;
+  color: var(--fontColor);
+  transition: var(--transition);
+}
+
+.close-x:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (min-width: 600px) {
+  .modal {
+    top: 105%;
+    left: 75%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .modal {
+    left: 105%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .modal {
+    top: -150%;
+  }
+}
+
 .roles {
   font-family: var(--mainFont);
   color: var(--fontColorTertiary);
@@ -264,13 +349,6 @@ a {
 
 /*   ----- Main  -----  */
 main {
-  /* width: calc(100vw - 50px);
-  height: calc(100vh - 50px); */
-  /* margin: var(--mainMargin); */
-  /* border-top: 1px solid var(--fontColor); */
-  /* padding: 4rem .5rem; */
-  /* overflow: auto; */
-  /* position: relative; */
   overflow: hidden;
 }
 
