--- a/src/index.css
+++ b/src/index.css
@@ -270,8 +270,8 @@ a {
 
 .modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 120%;
+  left: 45%;
   transform: translateX(-50%);
   z-index: 11;
   border-radius: 10px;
@@ -413,7 +413,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 2.5rem;
+  padding-top: 3.5rem;
 }
 
 @media screen and (min-width: 1100px) {
@@ -865,7 +865,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 2.5rem;
+  padding-top: 3.5rem;
 }
 
 @media screen and (min-width: 1100px) {
@@ -929,9 +929,15 @@ li {
 
 .slider-img {
   width: fit-content;
-  height: 200px;
+  height: 150px;
   margin: 1rem 0 -0.5rem;
   object-fit: cover;
+}
+
+@media screen and (min-width: 650px) {
+  .slider-img {
+    height: 200px;
+  }
 }
 
 .slider-header {
