--- a/src/index.css
+++ b/src/index.css
@@ -931,14 +931,14 @@ li {
   width: fit-content;
   height: 150px;
   margin: 1rem 0 -0.5rem;
-  object-fit: cover;
+  object-fit: contain;
 }
 
-@media screen and (min-width: 850px) {
+/* @media screen and (min-width: 850px) {
   .slider-img {
     height: 200px;
   }
-}
+} */
 
 .slider-header {
   display: flex;
