--- a/src/index.css
+++ b/src/index.css
@@ -1016,8 +1016,10 @@ li {
 }
 
 .dots {
-  margin-top: 400px;
-  margin-left: 48%;
+  position: absolute;
+  top: 400px;
+  left: 50%;
+  transform: translate(-50%)
 }
 
 .dots > ul {
@@ -1036,13 +1038,6 @@ li {
 .empty-dot {
   color: var(--fontColorTertiary);
   transform: scale(0.9);
-}
-
-@media screen and (min-width: 1100px) {
-  .dots {
-    margin-top: 480px;
-    margin-left: 46%;
-  }
 }
 
 .prev, .next {
